LFTCLab9/mylang.y
%{
#include <stdio.h>
#include <stdlib.h>
#define YYDEBUG 1

#define TIP_INT 1
#define TIP_REAL 2
#define TIP_CAR 3

double stiva[20];
int sp;

void push(double x)
{ stiva[sp++]=x; }

double pop()
{ return stiva[--sp]; }

%}

%union {
  	int l_val;
	char *p_val;
}


%token IDENTIFIER


%%
PROGRAM: COMPOUND_STATEMENT
;
VARIABLE_DECLARATION_STATEMENT: "let" VARIABLE_LIST
;
VARIABLE_LIST: VARIABLE_TO_LIST | VARIABLE_TO_LIST "," VARIABLE_LIST
;
VARIABLE_TO_LIST: VARIABLE|VARIABLE_N_ARRAY
;
VARIABLE_N_ARRAY: VARIABLE VARIABLE_N_ARRAY_COUNTER
;
VARIABLE_N_ARRAY_COUNTER: "[" EXPRESSION "]" | "[" EXPRESSION "]" VARIABLE_N_ARRAY_COUNTER
;
VARIABLE: IDENTIFIER
;
COMPOUND_STATEMENT: "{" STATEMENT_LIST "}"
;
STATEMENT_LIST: STATEMENT ";" | STATEMENT ";" STATEMENT_LIST
;
STATEMENT: SIMPLE_STATEMENT|COMPLEX_STATEMENT
;
SIMPLE_STATEMENT: ASSIGN_STATEMENT | IO_STATEMENT | VARIABLE_DECLARATION_STATEMENT
;
COMPLEX_STATEMENT: IF_STATEMENT | WHILE_STATEMENT
;
ASSIGN_STATEMENT: IDENTIFIER "=" IDENTIFIER|EXPRESSION
;
EXPRESSION: EXPRESSION_COUNTER TERM
;
EXPRESSION_COUNTER: EXPRESSION PLUSMINUS | EXPRESSION_COUNTER EXPRESSION PLUSMINUS
;
PLUSMINUS:"+"|"-"
;
TERM: TERM_COUNTER FACTOR
;
TERM_COUNTER: TERM TIMESDIV | TERM TIMESDIV TERM_COUNTER
;
TIMESDIV:"*" | "/"
;
FACTOR: "(" EXPRESSION ")" | INTEGER | IDENTIFIER
;
IO_STATEMENT: "(" IDENTIFIER ")"
;
IO:"input" | "output"
;
IF_STATEMENT:"if" "(" CONDITION ")" COMPOUND_STATEMENT | "if" "(" CONDITION ")" COMPOUND_STATEMENT ELSE_PART | "if" "(" CONDITION ")" COMPOUND_STATEMENT ELSE_IF_PART ELSE_PART
;
ELSE_IF_PART: "else-if" CONDITION COMPOUND_STATEMENT
;
ELSE_PART: "else" COMPOUND_STATEMENT
;
WHILE_STATEMENT: "while" "(" CONDITION ")" COMPOUND_STATEMENT
;
FOR_STATEMENT:"for" "(" SIMPLE_STATEMENT ";" CONDITION ";" SIMPLE_STATEMENT ")"  COMPOUND_STATEMENT 
;
CONDITION: EXPRESSION RELATION EXPRESSION
;
RELATION: "<" | "<=" | "==" | "!=" | ">=" | ">"
;
%%

yyerror(char *s)
{
  printf('%s\n', s);
}

extern FILE *yyin;

main(int argc, char **argv)
{
  if(argc>1) yyin = fopen(argv[1], 'r');
  if((argc>2)&&(!strcmp(argv[2],'-d'))) yydebug = 1;
  if(!yyparse()) fprintf(stderr,'\tO.K.\n');
}
